--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Rest Client Template</string>
-    <string name="login_label">Log in</string>
+    <string name="app_name">Twitter Timeline WoW</string>
+    <string name="login_label">Connect to Twitter</string>
 
 </resources>
